project(IOCM)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)

#add_executable(${PROJECT_NAME} ${SRC_LIST})

#add_executable(1-1 1-1.cpp)
#add_executable(1-1  1-1.cpp)
#add_executable(1-2  1-2.cpp)
#add_executable(1-3  1-3.cpp)
#add_executable(1-4  1-4.cpp)
add_executable(1-5  1-5.cpp)
#add_executable(1-6  1-6.cpp)
#add_executable(1-7  1-7.cpp)
